--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ section {
     padding-bottom: 5rem;
 }
 
+.nav-img {
+    width: 150px; /* Defina o tamanho desejado */
+    height: auto; /* Mantém a proporção */
+}
 
 .nav-link {
     color: #CB6D43;
