--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ section {
 }
 
 .nav-img {
-    width: 150px; /* Defina o tamanho desejado */
+    width: 25%; /* Defina o tamanho desejado */
     height: auto; /* Mantém a proporção */
 }
 
