--- a/style.css
+++ b/style.css
@@ -23,10 +23,9 @@ section {
 }
 
 .nav-img {
-    width: 25%; /* Defina o tamanho desejado */
-    height: auto; /* Mantém a proporção */
+    width: 150px !important;
+    height: auto !important;
 }
-
 .nav-link {
     color: #CB6D43;
     font-weight: 600;
