--- a/style.css
+++ b/style.css
@@ -27,6 +27,11 @@ section {
     font-weight: 600;
 }
 
+.nav-img {
+    width: 150px;  /* Defina a largura desejada */
+    height: auto;  /* Mantém a proporção da imagem */
+}
+
 .inicio-fundo {
     /* aula 3 */
     background-image: url('img/4965007.jpg');
@@ -45,7 +50,7 @@ section {
     position: absolute;
     right: 0;
     top: 18rem;
-    width: auto;
+    width: 45rem;
     height: auto;
 }
 
